--- a/src/main/resources/templates/hello.html
+++ b/src/main/resources/templates/hello.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Hello world</title>
 </head>
 <body>
 Hello world!
-<a href="/logout" >logout</a>
+<br/>
+<from th:method="POST" th:action="@{/logout}">
+    <input type="submit" value="Logout"/>
+</from>
 </body>
 </html>
